# imersao-dados-alura

./: .gitignore  README.md  pyproject.toml
aula-1/: aula1.py  aula1_pandas.ipynb
aula-2/: aula2_pandas.ipynb  aula2_pandas.py
aula-3/: aula_3_graficos.ipynb
aula-4/: app.py
